--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <img class="cabecalho-imagem" src="./img/logo.png" alt="logo da escola">
 <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
 
-</header>
-
+</header class="cabecalho">
+<img class="cabecalho-imagem" src=" /.img/logo.png" alt="logo da escola">
+<h1> "class=cabecalho-titulo" meu </h1>
 </body>
 </html>
