--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!--inicio sessão cabeçalho-->
 <header class="cabecalho">
     <img class="cabecalho-imagem" src="./img/logo.png" alt="logo da escola">
 <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
+<ul class="cabeçalho-lista">
+<li class="cabeçalho-lista-item"><a href="#escola">ESCOLA</a>/<li>
+</li class="cabeçalho-lista-item"><a href="#estudante">ESTUDANTE</a></li>
+</ul>
+</header>
+<!--fim da sessão cabeçalho-->
 
 </header class="cabecalho">
 <img class="cabecalho-imagem" src=" /.img/logo.png" alt="logo da escola">
