--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
 </header>
 <!--fim da sessão cabeçalho-->
 
-</header class="cabecalho">
-<img class="cabecalho-imagem" src=" /.img/logo.png" alt="logo da escola">
-<h1> "class=cabecalho-titulo" meu </h1>
+<!--inicio sessão escola-->
+<section class="escola">
+    ,<div class="escola-div-conteudo">
+        <h2 class="escola-titulo">colégio cívico militar professor francisco villanueva
+            <p class="escola-texto-um">ensino fundamental e médio</p></h2>
+            <p class="escola-texto-dois">a turma 2c é a mais estudiosa e famosa...</p>
+            </div>
+            <img class="escola-imagem" src="./img/escola.jpg" alt="foto da escola">
+</section>
+<!--fim da sessão escola-->
+
 </body>
 </html>
