--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 
-    <!--inicio sessão cabeçalho-->
+    <!--inicio sessão cabecalho-->
 <header class="cabecalho">
     <img class="cabecalho-imagem" src="./img/logo.png" alt="logo da escola">
     <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
-    <ul class="cabeçalho-lista">
-        <li class="cabeçalho-lista-item"><a href="#escola">ESCOLA</a>/<li>
-        </li class="cabeçalho-lista-item"><a href="#estudante">ESTUDANTE</a></li>
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item"><a href="#escola">ESCOLA</a>/<li>
+        </li class="cabecalho-lista-item"><a href="#estudante">ESTUDANTE</a></li>
     </ul>
 </header>
-<!--fim da sessão cabeçalho-->
+<!--fim da sessão cabecalho-->
 
 <!--inicio sessão escola-->
 <section class="escola">
