--- a/index.html
+++ b/index.html
@@ -32,3 +32,16 @@
 
 </body>
 </html>
+
+<--começo da seção estudante-->
+<saction class="estudante">
+<h2 class= "estudante-titulo">Quem Somos!!!</h2>
+<p>alunos do 2ºC ano da disciplina da Matemática II-Trilha de Programação-2ºC</p>
+
+<div class="estudantes-todos">
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="/img/imagem-estudante. jpg" alt="imagem-estudante">
+        ,<h3>class"estudante-nome">estudante1</h3>
+
+
+
