--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
     <ul class="cabecalho-lista">
         <li class="cabecalho-lista-item"><a href="#escola">ESCOLA</a>/<li>
-        </li class="cabecalho-lista-item"><a href="#estudante">ESTUDANTE</a></li>
+        <li class="cabecalho-lista-item"><a href="#estudante">ESTUDANTE</a></li>
     </ul>
 </header>
 <!--fim da sessão cabecalho-->
