--- a/index.html
+++ b/index.html
@@ -5,43 +5,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Criativo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <!--inicio sessão cabecalho-->
-<header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img/logo.png" alt="logo da escola">
+  
+<!--Inicio seção cabeçalho-->
+  <header class="cabecalho">
+    <img class="cabecalho-imagem" src="./img/logo-escola.jpg" alt="logo da escola">
     <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
     <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item"><a href="#escola">ESCOLA</a>/<li>
-        <li class="cabecalho-lista-item"><a href="#estudante">ESTUDANTE</a></li>
+      <li class="cabecalho-lista-item"><a href="#escola">ESCOLA</a></li>
+      <li class="cabecalho-lista-item"><a href="#estudante">ESTUDANTE</a></li>
     </ul>
-</header>
-<!--fim da sessão cabecalho-->
+  </header>
+<!--fim da seção cabeçalho-->
 
-<!--inicio sessão escola-->
-<section class="escola">
-    ,<div class="escola-div-conteudo">
-        <h2 class="escola-titulo">colégio cívico militar professor francisco villanueva
-            <p class="escola-texto-um">ensino fundamental e médio</p></h2>
-            <p class="escola-texto-dois">a turma 2c é a mais estudiosa e famosa...</p>
-            </div>
-            <img class="escola-imagem" src="./img/escola.jpg" alt="foto da escola">
+<!--Inicio seção escola-->
+<section class="principal__escola">
+  <div class="escola-div-conteudo">
+    <h2 class="escola-titulo muda_tamanho">Colégio Cívico Militar Professor Francisco Villanueva</h2>
+    <p class="escola-texto-um">Ensino Fundamental e Ensino Médio</p>
+    <p class="escola-texto-dois">A turma 2C é a mais estudiosa e famosa...</p>
+  </div>
+  <img class="escola-imagem" src="./img/escola.jpg" alt="foto da escola">
 </section>
-<!--fim da sessão escola-->
+<!--fim da seção escola-->
+
+<!--começo da seção estudante-->
+<section class="estudante"> 
+  <h2 class="estudante-titulo">Quem Somos!!!</h2>
+  <p>Alunos do 2º ano da disciplina de Matemática II-Trilha de Programação-2ºC</p>
+
+  <div class="estudantes-todos">
+      <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante1.jpg"  alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante1</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+          <a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+      </div>
+      
+      <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante1.jpg"  alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante2</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+          <a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+      </div>
+      <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante1.jpg"  alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante3</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+          <a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+      </div>
+      <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante1.jpg"  alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante4</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+          <a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+      </div>
+    
+      <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante1.jpg"  alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante5</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+          <a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+      </div>
+      <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante1.jpg"  alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante6</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+          <a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+      </div>
+      <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante1.jpg"  alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante7</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+          <a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+      </div>
+      <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante1.jpg"  alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante8</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+          <a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+      </div>
+  </div>
+</section> <!--fim da seção estudante-->
+
+<footer class="rodape">
+  <p class="copyright">&copy; Copyright Colégio Estadual Cívico-Militar Prof. Francisco Villanueva - 2024</p>
+</footer> 
 
 </body>
 </html>
-
-<--começo da seção estudante-->
-<saction class="estudante">
-<h2 class= "estudante-titulo">Quem Somos!!!</h2>
-<p>alunos do 2ºC ano da disciplina da Matemática II-Trilha de Programação-2ºC</p>
-
-<div class="estudantes-todos">
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="/img/imagem-estudante. jpg" alt="imagem-estudante">
-        ,<h3>class"estudante-nome">estudante1</h3>
-
-
-
