--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 <!--Inicio seção cabeçalho-->
   <header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img/logo-escola.jpg" alt="logo da escola">
+    <img class="cabecalho-imagem" src="./img/students-3518726_640.jpg" alt="logo da escola">
     <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
     <ul class="cabecalho-lista">
       <li class="cabecalho-lista-item"><a href="#escola">ESCOLA</a></li>
